--- a/testing/web-platform/tests/fenced-frame/hid.https.html
+++ b/testing/web-platform/tests/fenced-frame/hid.https.html
@@ -177,6 +177,16 @@ attachFencedFrameContext
 (
 )
 ;
+await
+multiClick
+(
+10
+10
+frame
+.
+element
+)
+;
 const
 result
 =
@@ -191,11 +201,6 @@ async
 =
 >
 {
-await
-simulateGesture
-(
-)
-;
 try
 {
 await
