--- a/testing/web-platform/tests/fenced-frame/permission-geolocation.https.html
+++ b/testing/web-platform/tests/fenced-frame/permission-geolocation.https.html
@@ -275,6 +275,23 @@ resolve
 }
 )
 ;
+await
+test_driver
+.
+set_permission
+(
+{
+name
+:
+'
+geolocation
+'
+}
+'
+granted
+'
+)
+;
 /
 /
 Pagehide
