--- a/testing/web-platform/tests/fenced-frame/resources/download-inner.html
+++ b/testing/web-platform/tests/fenced-frame/resources/download-inner.html
@@ -30,42 +30,6 @@ script
 src
 =
 "
-/
-resources
-/
-testdriver
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
--
-vendor
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
 download
 -
 helper
@@ -160,6 +124,30 @@ anchor
 '
 )
 {
+/
+/
+This
+link
+will
+be
+clicked
+in
+the
+main
+frame
+.
+/
+/
+See
+:
+.
+.
+/
+download
+.
+https
+.
+html
 const
 anchor
 =
@@ -178,13 +166,6 @@ anchor
 href
 =
 href
-;
-test_driver
-.
-click
-(
-anchor
-)
 ;
 }
 else
@@ -241,6 +222,24 @@ body
 >
 <
 a
+style
+=
+"
+position
+:
+absolute
+;
+width
+:
+100
+%
+;
+height
+:
+100
+%
+;
+"
 id
 =
 "
