--- a/testing/web-platform/tests/fenced-frame/resources/navigate-ancestor-test-runner.https.html
+++ b/testing/web-platform/tests/fenced-frame/resources/navigate-ancestor-test-runner.https.html
@@ -59,6 +59,61 @@ script
 src
 =
 "
+/
+resources
+/
+testdriver
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+actions
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+vendor
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
 utils
 .
 js
@@ -96,6 +151,7 @@ window
 .
 runTest
 =
+async
 function
 (
 test_type
@@ -320,6 +376,11 @@ test_promise
 =
 null
 ;
+let
+fenced_frame
+=
+null
+;
 switch
 (
 test_type
@@ -405,6 +466,8 @@ the
 test
 before
 .
+fenced_frame
+=
 attachFencedFrame
 (
 generateURL
@@ -425,6 +488,14 @@ ancestor_type
 )
 )
 ;
+await
+multiClick
+(
+10
+10
+fenced_frame
+)
+;
 test_promise
 =
 nextValueFromServer
@@ -441,6 +512,8 @@ fenced
 frame
 '
 :
+fenced_frame
+=
 attachFencedFrame
 (
 generateURL
@@ -466,6 +539,14 @@ navigate_ancestor_from_nested_key
 ancestor_type
 ]
 )
+)
+;
+await
+multiClick
+(
+10
+10
+fenced_frame
 )
 ;
 test_promise
@@ -506,6 +587,8 @@ nested
 iframe
 '
 :
+fenced_frame
+=
 attachFencedFrame
 (
 generateURL
@@ -529,6 +612,14 @@ navigate_ancestor_from_nested_key
 ancestor_type
 ]
 )
+)
+;
+await
+multiClick
+(
+10
+10
+fenced_frame
 )
 ;
 test_promise
