--- a/testing/web-platform/tests/fenced-frame/resources/web-bluetooth-inner.html
+++ b/testing/web-platform/tests/fenced-frame/resources/web-bluetooth-inner.html
@@ -8,61 +8,6 @@ script
 src
 =
 "
-/
-resources
-/
-testdriver
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
--
-actions
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
--
-vendor
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
 utils
 .
 js
@@ -112,11 +57,19 @@ async
 =
 >
 {
-await
-simulateGesture
+document
+.
+addEventListener
+(
+"
+click
+"
+async
 (
 )
-;
+=
+>
+{
 const
 [
 bluetooth_request_device_key
@@ -250,6 +203,9 @@ message
 ;
 }
 }
+}
+)
+;
 }
 )
 (
