--- a/testing/web-platform/tests/fenced-frame/resources/web-share-inner.html
+++ b/testing/web-platform/tests/fenced-frame/resources/web-share-inner.html
@@ -8,61 +8,6 @@ script
 src
 =
 "
-/
-resources
-/
-testdriver
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
--
-actions
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
--
-vendor
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
 utils
 .
 js
@@ -99,11 +44,19 @@ async
 =
 >
 {
-await
-simulateGesture
+document
+.
+addEventListener
+(
+"
+click
+"
+async
 (
 )
-;
+=
+>
+{
 const
 [
 navigator_share_key
@@ -157,6 +110,9 @@ failed
 )
 ;
 }
+}
+)
+;
 }
 )
 (
