--- a/testing/web-platform/tests/fenced-frame/show-directory-picker.https.html
+++ b/testing/web-platform/tests/fenced-frame/show-directory-picker.https.html
@@ -175,6 +175,16 @@ attachFencedFrameContext
 (
 )
 ;
+await
+multiClick
+(
+10
+10
+frame
+.
+element
+)
+;
 const
 result
 =
@@ -189,11 +199,6 @@ async
 =
 >
 {
-await
-simulateGesture
-(
-)
-;
 try
 {
 const
