--- a/testing/web-platform/tests/fenced-frame/web-bluetooth.https.html
+++ b/testing/web-platform/tests/fenced-frame/web-bluetooth.https.html
@@ -90,6 +90,25 @@ script
 src
 =
 "
+/
+resources
+/
+testdriver
+-
+actions
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
 resources
 /
 utils
@@ -138,6 +157,9 @@ token
 (
 )
 ;
+const
+fenced_frame
+=
 attachFencedFrame
 (
 generateURL
@@ -157,6 +179,14 @@ html
 bluetooth_request_device_key
 ]
 )
+)
+;
+await
+multiClick
+(
+10
+10
+fenced_frame
 )
 ;
 const
