--- a/testing/web-platform/tests/fenced-frame/web-share.https.html
+++ b/testing/web-platform/tests/fenced-frame/web-share.https.html
@@ -89,6 +89,25 @@ script
 src
 =
 "
+/
+resources
+/
+testdriver
+-
+actions
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
 resources
 /
 utils
@@ -137,6 +156,9 @@ token
 (
 )
 ;
+const
+fenced_frame
+=
 attachFencedFrame
 (
 generateURL
@@ -156,6 +178,14 @@ html
 navigator_share_key
 ]
 )
+)
+;
+await
+multiClick
+(
+10
+10
+fenced_frame
 )
 ;
 const
