--- a/testing/web-platform/tests/fenced-frame/download.https.html
+++ b/testing/web-platform/tests/fenced-frame/download.https.html
@@ -58,6 +58,61 @@ src
 =
 "
 /
+resources
+/
+testdriver
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+actions
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+vendor
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
 common
 /
 utils
@@ -231,6 +286,9 @@ type
 type
 }
 ;
+const
+fenced_frame
+=
 attachFencedFrame
 (
 fenced_frame_url
@@ -257,6 +315,36 @@ download
 '
 )
 ;
+/
+/
+Clicks
+must
+originate
+from
+the
+primary
+frame
+.
+if
+(
+type
+=
+=
+=
+"
+anchor
+"
+)
+{
+await
+multiClick
+(
+20
+20
+fenced_frame
+)
+;
+}
 const
 result
 =
