--- a/testing/web-platform/tests/fenced-frame/sandboxed-features-pointerlock.https.html
+++ b/testing/web-platform/tests/fenced-frame/sandboxed-features-pointerlock.https.html
@@ -103,6 +103,61 @@ js
 script
 >
 <
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+actions
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+vendor
+.
+js
+"
+>
+<
+/
+script
+>
+<
 body
 >
 <
