Bug 1924955 [wpt PR 48642] - DOM: Make moveBefore() throw for all pre-move validity checks, a=testonly
Automatic update from web-platform-tests
DOM: Make moveBefore() throw for all pre-move validity checks (#48642)

This CL makes moveBefore() match the spec PR [1], with regard to the
agreed-upon error-throwing behavior for all pre-moving validity and
hierarchy conditions. This means throwing an exception for:
 - Disconnected parent destination or move target
 - Cross-document Nodes
 - Destination parent that is not an Element node
 - Move target that is not an Element or character data

[1]: https://github.com/whatwg/dom/pull/1307

R=nrosenthalchromium.org

Bug: 40150299
Change-Id: Iaf5243fb2762e21ede068a222600bd158859fe92
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5935350
Reviewed-by: Noam Rosenthal <nrosenthalchromium.org>
Commit-Queue: Dominic Farolino <domchromium.org>
Cr-Commit-Position: refs/heads/main{#1369303}

Co-authored-by: Dominic Farolino <domchromium.org>
--

wpt-commits: 06b6ff6579327f235fff80b0f8bae8b0bbbc1069
wpt-pr: 48642

UltraBlame original commit: a83a47312c5d721bc563ddd08545e5a9fa19ec96

--- a/testing/web-platform/tests/dom/nodes/moveBefore/tentative/css-transition-cross-document.html
+++ b/testing/web-platform/tests/dom/nodes/moveBefore/tentative/css-transition-cross-document.html
@@ -268,6 +268,43 @@ resolve
 )
 )
 ;
+/
+/
+Calling
+moveBefore
+(
+)
+on
+a
+cross
+-
+document
+element
+undergoing
+a
+/
+/
+transition
+does
+not
+move
+the
+element
+nor
+alter
+the
+transition
+.
+assert_throws_dom
+(
+"
+HIERARCHY_REQUEST_ERR
+"
+(
+)
+=
+>
+{
 document
 .
 querySelector
@@ -284,6 +321,9 @@ moveBefore
 (
 item
 null
+)
+;
+}
 )
 ;
 await
@@ -305,7 +345,7 @@ resolve
 )
 )
 ;
-assert_greater_than
+assert_less_than
 (
 item
 .
@@ -314,7 +354,7 @@ getBoundingClientRect
 )
 .
 x
-399
+20
 )
 ;
 }
