--- a/testing/web-platform/tests/dom/nodes/moveBefore/tentative/css-transition-to-disconnected-document.html
+++ b/testing/web-platform/tests/dom/nodes/moveBefore/tentative/css-transition-to-disconnected-document.html
@@ -226,6 +226,43 @@ createHTMLDocument
 (
 )
 ;
+/
+/
+Calling
+moveBefore
+(
+)
+on
+a
+cross
+-
+document
+element
+undergoing
+a
+/
+/
+transition
+does
+not
+move
+the
+element
+nor
+alter
+the
+transition
+.
+assert_throws_dom
+(
+"
+HIERARCHY_REQUEST_ERR
+"
+(
+)
+=
+>
+{
 doc
 .
 body
@@ -234,6 +271,9 @@ moveBefore
 (
 item
 null
+)
+;
+}
 )
 ;
 await
@@ -255,7 +295,7 @@ resolve
 )
 )
 ;
-assert_equals
+assert_between_inclusive
 (
 item
 .
@@ -265,6 +305,7 @@ getBoundingClientRect
 .
 x
 0
+20
 )
 ;
 }
