--- a/testing/web-platform/tests/dom/nodes/moveBefore/tentative/Node-moveBefore.html
+++ b/testing/web-platform/tests/dom/nodes/moveBefore/tentative/Node-moveBefore.html
@@ -1826,6 +1826,26 @@ lastChild
 childElement
 )
 ;
+document
+.
+body
+.
+moveBefore
+(
+text
+null
+)
+;
+assert_equals
+(
+document
+.
+body
+.
+lastChild
+text
+)
+;
 }
 "
 moveBefore
@@ -1837,6 +1857,143 @@ CharacterData
 succeeds
 "
 )
+;
+test
+(
+t
+=
+>
+{
+const
+p
+=
+document
+.
+createElement
+(
+'
+p
+'
+)
+;
+p
+.
+textContent
+=
+"
+Some
+content
+"
+;
+document
+.
+body
+.
+prepend
+(
+p
+)
+;
+const
+text_node
+=
+p
+.
+firstChild
+;
+/
+/
+The
+Text
+node
+is
+*
+inside
+*
+the
+paragraph
+.
+assert_equals
+(
+text_node
+.
+textContent
+"
+Some
+content
+"
+)
+;
+assert_not_equals
+(
+document
+.
+body
+.
+lastChild
+text_node
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+{
+text_node
+.
+remove
+(
+)
+;
+p
+.
+remove
+(
+)
+;
+}
+)
+;
+document
+.
+body
+.
+moveBefore
+(
+p
+.
+firstChild
+null
+)
+;
+assert_equals
+(
+document
+.
+body
+.
+lastChild
+text_node
+)
+;
+}
+"
+moveBefore
+on
+a
+paragraph
+'
+s
+Text
+node
+child
+"
+)
+;
 /
 /
 Pre
