--- a/testing/web-platform/tests/FileAPI/BlobURL/cross-partition-navigation.tentative.https.html
+++ b/testing/web-platform/tests/FileAPI/BlobURL/cross-partition-navigation.tentative.https.html
@@ -1077,7 +1077,7 @@ noopener_response_2
 !
 =
 =
-opener_non_null_response
+opener_not_null_response
 )
 {
 reject
@@ -1137,6 +1137,405 @@ level
 -
 site
 navigation
+"
+)
+;
+/
+/
+Tests
+navigating
+to
+a
+cross
+-
+frame
+-
+origin
+opaque
+Blob
+URL
+where
+the
+embedded
+origin
+is
+null
+.
+promise_test
+(
+t
+=
+>
+{
+return
+new
+Promise
+(
+async
+(
+resolve
+reject
+)
+=
+>
+{
+try
+{
+const
+noopener_response_queue
+=
+token
+(
+)
+;
+const
+url_queue
+=
+token
+(
+)
+;
+const
+data_frame_html
+=
+<
+!
+doctype
+html
+>
+<
+!
+-
+-
+dispatcher
+.
+js
+requires
+the
+baseURI
+to
+be
+set
+in
+order
+to
+compute
+\
+the
+server
+path
+correctly
+in
+the
+data
+URL
+page
+.
+-
+-
+>
+<
+base
+href
+=
+"
+{
+window
+.
+location
+.
+href
+}
+"
+>
+<
+script
+src
+=
+"
+/
+html
+/
+cross
+-
+origin
+-
+embedder
+-
+policy
+/
+credentialless
+/
+resources
+/
+common
+.
+js
+"
+>
+<
+\
+/
+script
+>
+<
+script
+src
+=
+"
+/
+html
+/
+anonymous
+-
+iframe
+/
+resources
+/
+common
+.
+js
+"
+>
+<
+\
+/
+script
+>
+<
+script
+src
+=
+"
+/
+common
+/
+utils
+.
+js
+"
+>
+<
+\
+/
+script
+>
+<
+script
+src
+=
+"
+/
+common
+/
+dispatcher
+/
+dispatcher
+.
+js
+"
+>
+<
+\
+/
+script
+>
+<
+script
+>
+const
+frame_html
+=
+\
+<
+!
+doctype
+html
+>
+<
+body
+>
+test
+<
+/
+body
+>
+\
+;
+const
+blob
+=
+new
+Blob
+(
+[
+frame_html
+]
+{
+type
+:
+"
+text
+/
+html
+"
+}
+)
+;
+const
+blob_url
+=
+URL
+.
+createObjectURL
+(
+blob
+)
+;
+send
+(
+"
+{
+url_queue
+}
+"
+blob_url
+)
+;
+<
+\
+/
+script
+>
+;
+const
+iframe
+=
+document
+.
+body
+.
+appendChild
+(
+document
+.
+createElement
+(
+"
+iframe
+"
+)
+)
+;
+iframe
+.
+src
+=
+data
+:
+text
+/
+html
+{
+data_frame_html
+}
+;
+const
+blob_url
+=
+await
+receive
+(
+url_queue
+)
+;
+const
+handle
+=
+window
+.
+open
+(
+blob_url
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+iframe
+.
+remove
+(
+)
+)
+;
+if
+(
+handle
+!
+=
+=
+null
+)
+{
+handle
+.
+close
+(
+)
+;
+reject
+(
+Cross
+-
+origin
+opaque
+blob
+URL
+navigation
+succeeded
+.
+)
+;
+}
+resolve
+(
+)
+;
+}
+catch
+(
+e
+)
+{
+reject
+(
+e
+)
+;
+}
+}
+)
+;
+}
+"
+Navigation
+to
+a
+cross
+-
+origin
+opaque
+blob
+URL
+is
+blocked
+.
 "
 )
 ;
