Bug 1926001 [wpt PR 48731] - [Grid] Exclude repeaters from grid-template serialization, a=testonly
Automatic update from web-platform-tests
[Grid] Exclude repeaters from grid-template serialization

Repeaters were incorrectly being serialized into `grid-template`
shorthands (and thus failed to round-trip). The parser handles this
scenario, so it's only a serialization issue.

WPT tests were missing this case, so this change adds it to several
test files.

Change-Id: I4719f4fd6157e795e4b2fe9d543a72462a0ebbf8
Bug: 370937462
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5936195
Reviewed-by: Ethan Jimenez <ethavarmicrosoft.com>
Commit-Queue: Kurt Catti-Schmidt <kschmimicrosoft.com>
Reviewed-by: Kevin Babbitt <kbabbittmicrosoft.com>
Reviewed-by: Anders Hartvoll Ruud <andruudchromium.org>
Cr-Commit-Position: refs/heads/main{#1371667}

--

wpt-commits: 1059422a6efdd73dfa6f097a72020766d26ce018
wpt-pr: 48731

UltraBlame original commit: 080ec6fe5eb346b1fbb8fb9217ff696a10123152

--- a/testing/web-platform/tests/css/css-grid/parsing/grid-template-shorthand-invalid.html
+++ b/testing/web-platform/tests/css/css-grid/parsing/grid-template-shorthand-invalid.html
@@ -67,6 +67,32 @@ link
 rel
 =
 "
+author
+"
+title
+=
+"
+Kurt
+Catti
+-
+Schmidt
+"
+href
+=
+"
+mailto
+:
+kschmi
+microsoft
+.
+com
+"
+>
+<
+link
+rel
+=
+"
 help
 "
 href
@@ -354,7 +380,135 @@ template
 [
 a
 ]
+repeat
+(
+2
 10px
+)
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+[
+a
+]
+repeat
+(
+auto
+-
+fill
+10px
+)
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+[
+a
+]
+repeat
+(
+auto
+-
+fit
+10px
+)
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+[
+a
+]
+10px
+[
+]
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+[
+a
+]
+repeat
+(
+2
+10px
+)
+[
+]
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+[
+a
+]
+repeat
+(
+auto
+-
+fill
+10px
+)
+[
+]
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+[
+a
+]
+repeat
+(
+auto
+-
+fit
+10px
+)
 [
 ]
 '
@@ -396,6 +550,67 @@ grid
 template
 "
 '
+repeat
+(
+2
+10px
+)
+"
+a
+"
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+repeat
+(
+auto
+-
+fill
+10px
+)
+"
+a
+"
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+repeat
+(
+auto
+-
+fit
+10px
+)
+"
+a
+"
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
 [
 ]
 10px
@@ -413,7 +628,141 @@ grid
 template
 "
 '
+[
+]
+repeat
+(
+2
 10px
+)
+"
+a
+"
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+[
+]
+repeat
+(
+auto
+-
+fill
+10px
+)
+"
+a
+"
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+[
+]
+repeat
+(
+auto
+-
+fit
+10px
+)
+"
+a
+"
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+10px
+[
+]
+"
+a
+"
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+repeat
+(
+2
+10px
+)
+[
+]
+"
+a
+"
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+repeat
+(
+auto
+-
+fill
+10px
+)
+[
+]
+"
+a
+"
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+repeat
+(
+auto
+-
+fit
+10px
+)
 [
 ]
 "
@@ -482,10 +831,208 @@ template
 "
 a
 "
+repeat
+(
+2
+10px
+)
+10px
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+10px
+repeat
+(
+2
+10px
+)
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+repeat
+(
+auto
+-
+fill
+10px
+)
+10px
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+10px
+repeat
+(
+auto
+-
+fill
+10px
+)
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+repeat
+(
+auto
+-
+fit
+10px
+)
+10px
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+10px
+repeat
+(
+auto
+-
+fit
+10px
+)
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
 [
 a
 ]
 10px
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+[
+a
+]
+repeat
+(
+2
+10px
+)
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+[
+a
+]
+repeat
+(
+auto
+-
+fill
+10px
+)
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+[
+a
+]
+repeat
+(
+auto
+-
+fit
+10px
+)
 '
 )
 ;
@@ -524,6 +1071,85 @@ a
 [
 a
 ]
+repeat
+(
+2
+10px
+)
+[
+a
+]
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+[
+a
+]
+repeat
+(
+auto
+-
+fill
+10px
+)
+[
+a
+]
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+[
+a
+]
+repeat
+(
+auto
+-
+fit
+10px
+)
+[
+a
+]
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+[
+a
+]
 [
 a
 ]
@@ -542,7 +1168,165 @@ template
 "
 a
 "
+[
+a
+]
+[
+a
+]
+repeat
+(
+2
 10px
+)
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+[
+a
+]
+[
+a
+]
+repeat
+(
+auto
+-
+fill
+10px
+)
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+[
+a
+]
+[
+a
+]
+repeat
+(
+auto
+-
+fit
+10px
+)
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+10px
+[
+a
+]
+[
+a
+]
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+repeat
+(
+2
+10px
+)
+[
+a
+]
+[
+a
+]
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+repeat
+(
+auto
+-
+fill
+10px
+)
+[
+a
+]
+[
+a
+]
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+"
+a
+"
+repeat
+(
+auto
+-
+fit
+10px
+)
 [
 a
 ]
@@ -749,6 +1533,79 @@ a
 [
 ]
 10px
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+none
+/
+"
+a
+"
+[
+]
+repeat
+(
+2
+10px
+)
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+none
+/
+"
+a
+"
+[
+]
+repeat
+(
+auto
+-
+fill
+10px
+)
+'
+)
+;
+test_invalid_value
+(
+"
+grid
+-
+template
+"
+'
+none
+/
+"
+a
+"
+[
+]
+repeat
+(
+auto
+-
+fit
+10px
+)
 '
 )
 ;
