--- a/testing/web-platform/tests/css/css-grid/parsing/grid-template-shorthand.html
+++ b/testing/web-platform/tests/css/css-grid/parsing/grid-template-shorthand.html
@@ -41,6 +41,32 @@ link
 rel
 =
 "
+author
+"
+title
+=
+"
+Kurt
+Catti
+-
+Schmidt
+"
+href
+=
+"
+mailto
+:
+kschmi
+microsoft
+.
+com
+"
+>
+<
+link
+rel
+=
+"
 help
 "
 href
