--- a/testing/web-platform/tests/css/css-grid/parsing/grid-shorthand-serialization.html
+++ b/testing/web-platform/tests/css/css-grid/parsing/grid-shorthand-serialization.html
@@ -70,6 +70,32 @@ link
 rel
 =
 "
+author
+"
+title
+=
+"
+Kurt
+Catti
+-
+Schmidt
+"
+href
+=
+"
+mailto
+:
+kschmi
+microsoft
+.
+com
+"
+>
+<
+link
+rel
+=
+"
 help
 "
 href
@@ -702,6 +728,551 @@ grid
 auto
 -
 flow
+/
+10px
+;
+grid
+-
+template
+-
+rows
+:
+repeat
+(
+2
+20px
+)
+'
+{
+'
+grid
+'
+:
+'
+repeat
+(
+2
+20px
+)
+/
+10px
+'
+'
+grid
+-
+template
+-
+rows
+'
+:
+'
+repeat
+(
+2
+20px
+)
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
+auto
+-
+flow
+/
+10px
+;
+grid
+-
+template
+-
+rows
+:
+repeat
+(
+2
+20px
+)
+repeat
+(
+3
+30px
+)
+'
+{
+'
+grid
+'
+:
+'
+repeat
+(
+2
+20px
+)
+repeat
+(
+3
+30px
+)
+/
+10px
+'
+'
+grid
+-
+template
+-
+rows
+'
+:
+'
+repeat
+(
+2
+20px
+)
+repeat
+(
+3
+30px
+)
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
+auto
+-
+flow
+/
+10px
+;
+grid
+-
+template
+-
+rows
+:
+repeat
+(
+auto
+-
+fill
+20px
+)
+'
+{
+'
+grid
+'
+:
+'
+repeat
+(
+auto
+-
+fill
+20px
+)
+/
+10px
+'
+'
+grid
+-
+template
+-
+rows
+'
+:
+'
+repeat
+(
+auto
+-
+fill
+20px
+)
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
+auto
+-
+flow
+/
+10px
+;
+grid
+-
+template
+-
+rows
+:
+repeat
+(
+auto
+-
+fit
+20px
+)
+'
+{
+'
+grid
+'
+:
+'
+repeat
+(
+auto
+-
+fit
+20px
+)
+/
+10px
+'
+'
+grid
+-
+template
+-
+rows
+'
+:
+'
+repeat
+(
+auto
+-
+fit
+20px
+)
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
+10px
+/
+auto
+;
+grid
+-
+template
+-
+columns
+:
+20px
+'
+{
+'
+grid
+'
+:
+'
+10px
+/
+20px
+'
+'
+grid
+-
+template
+'
+:
+'
+10px
+/
+20px
+'
+}
+[
+'
+grid
+:
+10px
+/
+20px
+;
+'
+]
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
+auto
+-
+flow
+/
+10px
+;
+grid
+-
+template
+-
+columns
+:
+repeat
+(
+2
+20px
+)
+'
+{
+'
+grid
+'
+:
+'
+none
+/
+repeat
+(
+2
+20px
+)
+'
+'
+grid
+-
+template
+-
+columns
+'
+:
+'
+repeat
+(
+2
+20px
+)
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
+auto
+-
+flow
+/
+10px
+;
+grid
+-
+template
+-
+columns
+:
+repeat
+(
+2
+20px
+)
+repeat
+(
+3
+30px
+)
+'
+{
+'
+grid
+'
+:
+'
+none
+/
+repeat
+(
+2
+20px
+)
+repeat
+(
+3
+30px
+)
+'
+'
+grid
+-
+template
+-
+columns
+'
+:
+'
+repeat
+(
+2
+20px
+)
+repeat
+(
+3
+30px
+)
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
+auto
+-
+flow
+/
+10px
+;
+grid
+-
+template
+-
+columns
+:
+repeat
+(
+auto
+-
+fill
+20px
+)
+'
+{
+'
+grid
+'
+:
+'
+none
+/
+repeat
+(
+auto
+-
+fill
+20px
+)
+'
+'
+grid
+-
+template
+-
+columns
+'
+:
+'
+repeat
+(
+auto
+-
+fill
+20px
+)
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
+auto
+-
+flow
+/
+10px
+;
+grid
+-
+template
+-
+columns
+:
+repeat
+(
+auto
+-
+fit
+20px
+)
+'
+{
+'
+grid
+'
+:
+'
+none
+/
+repeat
+(
+auto
+-
+fit
+20px
+)
+'
+'
+grid
+-
+template
+-
+columns
+'
+:
+'
+repeat
+(
+auto
+-
+fit
+20px
+)
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
+auto
+-
+flow
 1px
 /
 2px
@@ -1282,6 +1853,293 @@ test_shorthand_roundtrip
 '
 grid
 :
+none
+/
+auto
+-
+flow
+1px
+;
+grid
+-
+template
+-
+columns
+:
+repeat
+(
+2
+3px
+)
+'
+{
+'
+grid
+'
+:
+'
+'
+'
+grid
+-
+auto
+-
+columns
+'
+:
+'
+1px
+'
+'
+grid
+-
+auto
+-
+rows
+'
+:
+'
+auto
+'
+'
+grid
+-
+auto
+-
+flow
+'
+:
+'
+column
+'
+'
+grid
+-
+template
+-
+columns
+'
+:
+'
+repeat
+(
+2
+3px
+)
+'
+'
+grid
+-
+template
+-
+rows
+'
+:
+'
+none
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
+none
+/
+auto
+-
+flow
+1px
+;
+grid
+-
+template
+-
+columns
+:
+repeat
+(
+auto
+-
+fill
+3px
+)
+'
+{
+'
+grid
+'
+:
+'
+'
+'
+grid
+-
+auto
+-
+columns
+'
+:
+'
+1px
+'
+'
+grid
+-
+auto
+-
+rows
+'
+:
+'
+auto
+'
+'
+grid
+-
+auto
+-
+flow
+'
+:
+'
+column
+'
+'
+grid
+-
+template
+-
+columns
+'
+:
+'
+repeat
+(
+auto
+-
+fill
+3px
+)
+'
+'
+grid
+-
+template
+-
+rows
+'
+:
+'
+none
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
+none
+/
+auto
+-
+flow
+1px
+;
+grid
+-
+template
+-
+columns
+:
+repeat
+(
+auto
+-
+fit
+3px
+)
+'
+{
+'
+grid
+'
+:
+'
+'
+'
+grid
+-
+auto
+-
+columns
+'
+:
+'
+1px
+'
+'
+grid
+-
+auto
+-
+rows
+'
+:
+'
+auto
+'
+'
+grid
+-
+auto
+-
+flow
+'
+:
+'
+column
+'
+'
+grid
+-
+template
+-
+columns
+'
+:
+'
+repeat
+(
+auto
+-
+fit
+3px
+)
+'
+'
+grid
+-
+template
+-
+rows
+'
+:
+'
+none
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
 auto
 -
 flow
@@ -1358,6 +2216,677 @@ rows
 :
 '
 3px
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
+auto
+-
+flow
+1px
+/
+none
+;
+grid
+-
+template
+-
+rows
+:
+repeat
+(
+2
+3px
+)
+'
+{
+'
+grid
+'
+:
+'
+'
+'
+grid
+-
+auto
+-
+columns
+'
+:
+'
+auto
+'
+'
+grid
+-
+auto
+-
+rows
+'
+:
+'
+1px
+'
+'
+grid
+-
+auto
+-
+flow
+'
+:
+'
+row
+'
+'
+grid
+-
+template
+-
+columns
+'
+:
+'
+none
+'
+'
+grid
+-
+template
+-
+rows
+'
+:
+'
+repeat
+(
+2
+3px
+)
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
+auto
+-
+flow
+1px
+/
+none
+;
+grid
+-
+template
+-
+rows
+:
+repeat
+(
+auto
+-
+fill
+3px
+)
+'
+{
+'
+grid
+'
+:
+'
+'
+'
+grid
+-
+auto
+-
+columns
+'
+:
+'
+auto
+'
+'
+grid
+-
+auto
+-
+rows
+'
+:
+'
+1px
+'
+'
+grid
+-
+auto
+-
+flow
+'
+:
+'
+row
+'
+'
+grid
+-
+template
+-
+columns
+'
+:
+'
+none
+'
+'
+grid
+-
+template
+-
+rows
+'
+:
+'
+repeat
+(
+auto
+-
+fill
+3px
+)
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+:
+auto
+-
+flow
+1px
+/
+none
+;
+grid
+-
+template
+-
+rows
+:
+repeat
+(
+auto
+-
+fit
+3px
+)
+'
+{
+'
+grid
+'
+:
+'
+'
+'
+grid
+-
+auto
+-
+columns
+'
+:
+'
+auto
+'
+'
+grid
+-
+auto
+-
+rows
+'
+:
+'
+1px
+'
+'
+grid
+-
+auto
+-
+flow
+'
+:
+'
+row
+'
+'
+grid
+-
+template
+-
+columns
+'
+:
+'
+none
+'
+'
+grid
+-
+template
+-
+rows
+'
+:
+'
+repeat
+(
+auto
+-
+fit
+3px
+)
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+-
+template
+-
+rows
+:
+auto
+auto
+;
+grid
+-
+template
+-
+columns
+:
+repeat
+(
+2
+3px
+)
+;
+grid
+-
+template
+-
+areas
+:
+"
+one
+two
+"
+"
+three
+four
+"
+'
+{
+'
+grid
+'
+:
+'
+'
+'
+grid
+-
+template
+-
+areas
+'
+:
+'
+"
+one
+two
+"
+"
+three
+four
+"
+'
+'
+grid
+-
+template
+-
+rows
+'
+:
+'
+auto
+auto
+'
+'
+grid
+-
+template
+-
+columns
+'
+:
+'
+repeat
+(
+2
+3px
+)
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+-
+template
+-
+rows
+:
+auto
+auto
+;
+grid
+-
+template
+-
+columns
+:
+repeat
+(
+2
+1fr
+)
+;
+grid
+-
+template
+-
+areas
+:
+"
+one
+two
+"
+"
+three
+four
+"
+'
+{
+'
+grid
+'
+:
+'
+'
+'
+grid
+-
+template
+-
+areas
+'
+:
+'
+"
+one
+two
+"
+"
+three
+four
+"
+'
+'
+grid
+-
+template
+-
+rows
+'
+:
+'
+auto
+auto
+'
+'
+grid
+-
+template
+-
+columns
+'
+:
+'
+repeat
+(
+2
+1fr
+)
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+-
+template
+-
+rows
+:
+auto
+auto
+;
+grid
+-
+template
+-
+columns
+:
+repeat
+(
+auto
+-
+fill
+3px
+)
+;
+grid
+-
+template
+-
+areas
+:
+"
+one
+two
+"
+"
+three
+four
+"
+'
+{
+'
+grid
+'
+:
+'
+'
+'
+grid
+-
+template
+-
+areas
+'
+:
+'
+"
+one
+two
+"
+"
+three
+four
+"
+'
+'
+grid
+-
+template
+-
+rows
+'
+:
+'
+auto
+auto
+'
+'
+grid
+-
+template
+-
+columns
+'
+:
+'
+repeat
+(
+auto
+-
+fill
+3px
+)
+'
+}
+)
+;
+test_shorthand_roundtrip
+(
+'
+grid
+-
+template
+-
+rows
+:
+auto
+auto
+;
+grid
+-
+template
+-
+columns
+:
+repeat
+(
+auto
+-
+fit
+3px
+)
+;
+grid
+-
+template
+-
+areas
+:
+"
+one
+two
+"
+"
+three
+four
+"
+'
+{
+'
+grid
+'
+:
+'
+'
+'
+grid
+-
+template
+-
+areas
+'
+:
+'
+"
+one
+two
+"
+"
+three
+four
+"
+'
+'
+grid
+-
+template
+-
+rows
+'
+:
+'
+auto
+auto
+'
+'
+grid
+-
+template
+-
+columns
+'
+:
+'
+repeat
+(
+auto
+-
+fit
+3px
+)
 '
 }
 )
