Bug 1925906 [wpt PR 48724] - css-shapes: Fix shape-image-027.html flakiness, a=testonly
Automatic update from web-platform-tests
css-shapes: Fix shape-image-027.html flakiness

Bug: 372756068
Change-Id: Ib92203161e91d3554a06d0f78d3d4b7af7aff349
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5938767
Reviewed-by: Morten Stenshorne <mstenshochromium.org>
Auto-Submit: Kent Tamura <tkentchromium.org>
Commit-Queue: Kent Tamura <tkentchromium.org>
Cr-Commit-Position: refs/heads/main{#1371796}

--

wpt-commits: 67508eb6595a0f8634e05522d9078d6ccc432976
wpt-pr: 48724

UltraBlame original commit: 99597193fa5d8dcead994d7edfb5897fee568f93

--- a/testing/web-platform/tests/css/css-shapes/shape-outside/shape-image/shape-image-027.html
+++ b/testing/web-platform/tests/css/css-shapes/shape-outside/shape-image/shape-image-027.html
@@ -5,6 +5,13 @@ html
 >
 <
 html
+class
+=
+"
+reftest
+-
+wait
+"
 >
 <
 head
@@ -619,6 +626,96 @@ failure
 <
 /
 div
+>
+<
+script
+>
+/
+/
+A
+workaround
+of
+an
+issue
+of
+Chromium
+content_shell
+.
+It
+finishes
+a
+test
+/
+/
+without
+waiting
+layout
+with
+images
+linked
+from
+url
+(
+)
+.
+crbug
+.
+com
+/
+372756068
+window
+.
+addEventListener
+(
+'
+load
+'
+(
+)
+=
+>
+{
+requestAnimationFrame
+(
+(
+)
+=
+>
+{
+requestAnimationFrame
+(
+(
+)
+=
+>
+{
+document
+.
+documentElement
+.
+classList
+.
+remove
+(
+'
+reftest
+-
+wait
+'
+)
+;
+}
+)
+;
+}
+)
+;
+}
+)
+;
+<
+/
+script
 >
 <
 /
