--- a/testing/web-platform/tests/css/css-multicol/getclientrects-001.html
+++ b/testing/web-platform/tests/css/css-multicol/getclientrects-001.html
@@ -205,6 +205,30 @@ rl
 ;
 }
 #
+sidewaysLrLtr
+{
+writing
+-
+mode
+:
+sideways
+-
+lr
+;
+}
+#
+sidewaysRlLtr
+{
+writing
+-
+mode
+:
+sideways
+-
+rl
+;
+}
+#
 horizontalTbRtl
 {
 writing
@@ -244,6 +268,38 @@ writing
 mode
 :
 vertical
+-
+rl
+;
+direction
+:
+rtl
+;
+}
+#
+sidewaysLrRtl
+{
+writing
+-
+mode
+:
+sideways
+-
+lr
+;
+direction
+:
+rtl
+;
+}
+#
+sidewaysRlRtl
+{
+writing
+-
+mode
+:
+sideways
 -
 rl
 ;
@@ -359,6 +415,68 @@ multicol
 id
 =
 "
+sidewaysLrLtr
+"
+>
+<
+br
+>
+<
+span
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+/
+span
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+id
+=
+"
+sidewaysRlLtr
+"
+>
+<
+br
+>
+<
+span
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+/
+span
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+id
+=
+"
 horizontalTbRtl
 "
 >
@@ -443,6 +561,68 @@ span
 div
 >
 <
+div
+class
+=
+"
+multicol
+"
+id
+=
+"
+sidewaysLrRtl
+"
+>
+<
+br
+>
+<
+span
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+/
+span
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+id
+=
+"
+sidewaysRlRtl
+"
+>
+<
+br
+>
+<
+span
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+/
+span
+>
+<
+/
+div
+>
+<
 script
 src
 =
@@ -479,6 +659,36 @@ script
 <
 script
 >
+const
+LEFT
+=
+100
+;
+const
+TOP
+=
+50
+;
+const
+LINE
+=
+20
+;
+const
+COLUMN
+=
+90
+;
+const
+GAP
+=
+10
+;
+const
+TEXT_SIZE
+=
+80
+;
 test
 (
 (
@@ -900,6 +1110,330 @@ querySelector
 (
 "
 #
+sidewaysLrLtr
+span
+"
+)
+;
+var
+rects
+=
+span
+.
+getClientRects
+(
+)
+;
+assert_equals
+(
+rects
+.
+length
+4
+)
+;
+assert_equals
+(
+rects
+[
+0
+]
+.
+left
+LEFT
++
+LINE
+)
+;
+assert_equals
+(
+rects
+[
+0
+]
+.
+top
+TOP
++
+COLUMN
+*
+3
++
+GAP
+*
+2
+-
+TEXT_SIZE
+)
+;
+assert_equals
+(
+rects
+[
+1
+]
+.
+left
+LEFT
+)
+;
+assert_equals
+(
+rects
+[
+1
+]
+.
+top
+TOP
++
+COLUMN
+*
+2
++
+GAP
+-
+TEXT_SIZE
+)
+;
+assert_equals
+(
+rects
+[
+2
+]
+.
+left
+LEFT
++
+LINE
+)
+;
+assert_equals
+(
+rects
+[
+2
+]
+.
+top
+TOP
++
+COLUMN
+*
+2
++
+GAP
+-
+TEXT_SIZE
+)
+;
+assert_equals
+(
+rects
+[
+3
+]
+.
+left
+LEFT
+)
+;
+assert_equals
+(
+rects
+[
+3
+]
+.
+top
+TOP
++
+COLUMN
+-
+TEXT_SIZE
+)
+;
+}
+"
+sideways
+-
+lr
+ltr
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+var
+span
+=
+document
+.
+querySelector
+(
+"
+#
+sidewaysRlLtr
+span
+"
+)
+;
+var
+rects
+=
+span
+.
+getClientRects
+(
+)
+;
+assert_equals
+(
+rects
+.
+length
+4
+)
+;
+assert_equals
+(
+rects
+[
+0
+]
+.
+left
+LEFT
+)
+;
+assert_equals
+(
+rects
+[
+0
+]
+.
+top
+TOP
+)
+;
+assert_equals
+(
+rects
+[
+1
+]
+.
+left
+LEFT
++
+LINE
+)
+;
+assert_equals
+(
+rects
+[
+1
+]
+.
+top
+TOP
++
+COLUMN
++
+GAP
+)
+;
+assert_equals
+(
+rects
+[
+2
+]
+.
+left
+LEFT
+)
+;
+assert_equals
+(
+rects
+[
+2
+]
+.
+top
+TOP
++
+COLUMN
++
+GAP
+)
+;
+assert_equals
+(
+rects
+[
+3
+]
+.
+left
+LEFT
++
+LINE
+)
+;
+assert_equals
+(
+rects
+[
+3
+]
+.
+top
+TOP
++
+COLUMN
+*
+2
++
+GAP
+*
+2
+)
+;
+}
+"
+sideways
+-
+rl
+ltr
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+var
+span
+=
+document
+.
+querySelector
+(
+"
+#
 horizontalTbRtl
 span
 "
@@ -1283,6 +1817,330 @@ top
 }
 "
 vertical
+-
+rl
+rtl
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+var
+span
+=
+document
+.
+querySelector
+(
+"
+#
+sidewaysLrRtl
+span
+"
+)
+;
+var
+rects
+=
+span
+.
+getClientRects
+(
+)
+;
+assert_equals
+(
+rects
+.
+length
+4
+)
+;
+assert_equals
+(
+rects
+[
+0
+]
+.
+left
+LEFT
++
+LINE
+)
+;
+assert_equals
+(
+rects
+[
+0
+]
+.
+top
+TOP
+)
+;
+assert_equals
+(
+rects
+[
+1
+]
+.
+left
+LEFT
+)
+;
+assert_equals
+(
+rects
+[
+1
+]
+.
+top
+TOP
++
+COLUMN
++
+GAP
+)
+;
+assert_equals
+(
+rects
+[
+2
+]
+.
+left
+LEFT
++
+LINE
+)
+;
+assert_equals
+(
+rects
+[
+2
+]
+.
+top
+TOP
++
+COLUMN
++
+GAP
+)
+;
+assert_equals
+(
+rects
+[
+3
+]
+.
+left
+LEFT
+)
+;
+assert_equals
+(
+rects
+[
+3
+]
+.
+top
+TOP
++
+COLUMN
++
+GAP
++
+COLUMN
++
+GAP
+)
+;
+}
+"
+sideways
+-
+lr
+rtl
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+var
+span
+=
+document
+.
+querySelector
+(
+"
+#
+sidewaysRlRtl
+span
+"
+)
+;
+var
+rects
+=
+span
+.
+getClientRects
+(
+)
+;
+assert_equals
+(
+rects
+.
+length
+4
+)
+;
+assert_equals
+(
+rects
+[
+0
+]
+.
+left
+LEFT
+)
+;
+assert_equals
+(
+rects
+[
+0
+]
+.
+top
+TOP
++
+COLUMN
+*
+3
++
+GAP
+*
+2
+-
+TEXT_SIZE
+)
+;
+assert_equals
+(
+rects
+[
+1
+]
+.
+left
+LEFT
++
+LINE
+)
+;
+assert_equals
+(
+rects
+[
+1
+]
+.
+top
+TOP
++
+COLUMN
+*
+2
++
+GAP
+-
+TEXT_SIZE
+)
+;
+assert_equals
+(
+rects
+[
+2
+]
+.
+left
+LEFT
+)
+;
+assert_equals
+(
+rects
+[
+2
+]
+.
+top
+TOP
++
+COLUMN
+*
+2
++
+GAP
+-
+TEXT_SIZE
+)
+;
+assert_equals
+(
+rects
+[
+3
+]
+.
+left
+LEFT
++
+LINE
+)
+;
+assert_equals
+(
+rects
+[
+3
+]
+.
+top
+TOP
++
+COLUMN
+-
+TEXT_SIZE
+)
+;
+}
+"
+sideways
 -
 rl
 rtl
