--- a/testing/web-platform/tests/css/css-sizing/keyword-sizes-on-inline-block.html
+++ b/testing/web-platform/tests/css/css-sizing/keyword-sizes-on-inline-block.html
@@ -2394,6 +2394,105 @@ div
 !
 -
 -
+Stretch
+sizes
+can
+'
+t
+result
+in
+a
+negative
+content
+size
+-
+-
+>
+<
+div
+class
+=
+"
+wrapper
+"
+style
+=
+"
+width
+:
+0px
+;
+height
+:
+0px
+"
+>
+<
+div
+class
+=
+"
+test
+width
+min
+-
+width
+max
+-
+width
+stretch
+"
+data
+-
+expected
+-
+width
+=
+"
+10
+"
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+test
+height
+min
+-
+height
+max
+-
+height
+stretch
+"
+data
+-
+expected
+-
+height
+=
+"
+10
+"
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+!
+-
+-
 Indefinite
 stretch
 -
