Bug 1926240: part 2) Link to spec. r=tschuster
Differential Revision: https://phabricator.services.mozilla.com/D226447

UltraBlame original commit: 1a0d70ac1d1ba420aa2fad876d677a1f8552df34

--- a/testing/web-platform/tests/content-security-policy/navigation/javascript-url-navigation-evaluated-to-string-inherits-csp.html
+++ b/testing/web-platform/tests/content-security-policy/navigation/javascript-url-navigation-evaluated-to-string-inherits-csp.html
@@ -4,6 +4,48 @@ DOCTYPE
 html
 >
 <
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
+html
+.
+spec
+.
+whatwg
+.
+org
+/
+multipage
+/
+browsing
+-
+the
+-
+web
+.
+html
+#
+evaluate
+-
+a
+-
+javascript
+:
+-
+url
+"
+>
+<
 script
 src
 =
