Bug 1926286 - Add WPT tests for getPropertyType/getAttributeType with explicit null elementNs/attrNs. r=smaug
See https://github.com/w3c/trusted-types/issues/553

Differential Revision: https://phabricator.services.mozilla.com/D226547

UltraBlame original commit: 3cd560489b81d73359c865b7613df0e98fc653dd

--- a/testing/web-platform/tests/trusted-types/TrustedTypePolicyFactory-getPropertyType.tentative.html
+++ b/testing/web-platform/tests/trusted-types/TrustedTypePolicyFactory-getPropertyType.tentative.html
@@ -1536,6 +1536,103 @@ name
 "
 )
 ;
+test
+(
+t
+=
+>
+{
+assert_equals
+(
+trustedTypes
+.
+getPropertyType
+(
+"
+iframe
+"
+"
+srcdoc
+"
+null
+)
+"
+TrustedHTML
+"
+"
+null
+elementNs
+in
+getPropertyType
+"
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getAttributeType
+(
+"
+iframe
+"
+"
+srcdoc
+"
+null
+NSURI_EMPTY
+)
+"
+TrustedHTML
+"
+"
+null
+elementNs
+in
+getAttributeType
+"
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getAttributeType
+(
+"
+iframe
+"
+"
+srcdoc
+"
+NSURI_HTML
+null
+)
+"
+TrustedHTML
+"
+"
+null
+attrNs
+in
+getAttributeType
+"
+)
+;
+}
+"
+getPropertyType
+/
+getAttributeType
+with
+explicit
+null
+elementNs
+/
+attrNs
+"
+)
+;
 <
 /
 script
