--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -966,63 +966,17 @@ tabs
 "
 /
 >
-<
-hbox
-id
-=
-"
+#
+include
 private
 -
 browsing
 -
 indicator
--
-with
--
-label
-"
->
-<
-image
-class
-=
-"
-private
--
-browsing
--
-indicator
--
-icon
-"
-/
->
-<
-label
-data
--
-l10n
--
-id
-=
-"
-private
--
-browsing
--
-indicator
--
-label
-"
->
-<
-/
-label
->
-<
-/
-hbox
->
+.
+inc
+.
+xhtml
 <
 toolbarbutton
 id
@@ -5612,6 +5566,17 @@ tabs
 "
 /
 >
+#
+include
+private
+-
+browsing
+-
+indicator
+.
+inc
+.
+xhtml
 #
 include
 titlebar
