Bug 1131324 - Expose ServiceWorkerContainer on WorkerNavigator. r=dom-worker-reviewers,webidl,smaug
Differential Revision: https://phabricator.services.mozilla.com/D213725

UltraBlame original commit: 244df402d6ebc15d6845c4144245511021408835

--- a/testing/web-platform/tests/service-workers/service-worker/resources/local-url-inherit-controller-frame.html
+++ b/testing/web-platform/tests/service-workers/service-worker/resources/local-url-inherit-controller-frame.html
@@ -884,11 +884,27 @@ m
 =
 >
 {
+/
+/
+(
+null
+is
+a
+valid
+value
+when
+the
+SharedWorker
+is
+not
+controlled
+)
 if
 (
 m
 .
 data
+?
 .
 includes
 (
