Bug 1926093 [wpt PR 48739] - Fire input and change for customizable select, a=testonly
Automatic update from web-platform-tests
Fire input and change for customizable select

Calling HTMLOptionElement::SetSelected doesn't fire input or change
events, so this patch changes the mouse/keyboard code in
HTMLOptionElement to call other methods on HTMLSelectElement which fire
those events.

Fixed: 374241712
Change-Id: Ibb87f73ab570201e669960ea269f7e688fed6569
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5943703
Reviewed-by: Traian Captan <tcaptanchromium.org>
Commit-Queue: Joey Arhar <jarharchromium.org>
Cr-Commit-Position: refs/heads/main{#1372115}

--

wpt-commits: 6575bab107aec3b8a74ad03528081aacc69b0dbc
wpt-pr: 48739

UltraBlame original commit: ebe5020481c005339d733360b9996350b1071c43

--- a/testing/web-platform/tests/html/semantics/forms/the-select-element/customizable-select/select-keyboard-behavior.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-select-element/customizable-select/select-keyboard-behavior.tentative.html
@@ -1668,6 +1668,48 @@ option
 '
 )
 ;
+let
+firedInput
+=
+false
+;
+let
+firedChange
+=
+false
+;
+select
+.
+addEventListener
+(
+'
+input
+'
+(
+)
+=
+>
+firedInput
+=
+true
+)
+;
+select
+.
+addEventListener
+(
+'
+change
+'
+(
+)
+=
+>
+firedChange
+=
+true
+)
+;
 await
 test_driver
 .
@@ -1730,6 +1772,42 @@ enter
 on
 a
 different
+option
+.
+'
+)
+;
+assert_true
+(
+firedInput
+'
+The
+input
+event
+should
+be
+fired
+when
+choosing
+an
+option
+.
+'
+)
+;
+assert_true
+(
+firedChange
+'
+The
+change
+event
+should
+be
+fired
+when
+choosing
+an
 option
 .
 '
