--- a/testing/web-platform/tests/html/semantics/forms/the-select-element/customizable-select/select-mouse-behavior.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-select-element/customizable-select/select-mouse-behavior.tentative.html
@@ -620,6 +620,48 @@ button
 '
 )
 ;
+let
+firedInput
+=
+false
+;
+let
+firedChange
+=
+false
+;
+select
+.
+addEventListener
+(
+'
+input
+'
+(
+)
+=
+>
+firedInput
+=
+true
+)
+;
+select
+.
+addEventListener
+(
+'
+change
+'
+(
+)
+=
+>
+firedChange
+=
+true
+)
+;
 await
 test_driver
 .
@@ -670,6 +712,42 @@ two
 after
 clicking
 the
+option
+.
+'
+)
+;
+assert_true
+(
+firedInput
+'
+The
+input
+event
+should
+be
+fired
+when
+choosing
+an
+option
+.
+'
+)
+;
+assert_true
+(
+firedChange
+'
+The
+change
+event
+should
+be
+fired
+when
+choosing
+an
 option
 .
 '
