Bug 1926377 [wpt PR 48757] - Attempt to de-flake web-share and web-bluetooth tests., a=testonly
Automatic update from web-platform-tests
Attempt to de-flake web-share and web-bluetooth tests.

These tests are flaking after a refactor to get them to work with
headless mode. This CL refactors them again to use remote context
executors. This CL also ensures that the frames are live before
attempting to give them user activation by clicking.

Bug: 374384731
Bug: 374376117
Change-Id: I0188d0117b6a7ba69e2ad30b2558e81e8c256f1a
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5954504
Reviewed-by: Andrew Verge <avergechromium.org>
Commit-Queue: Liam Brady <lbradygoogle.com>
Cr-Commit-Position: refs/heads/main{#1372175}

--

wpt-commits: be00d61dbd576e02219a010f3c4954c8fb541f21
wpt-pr: 48757

UltraBlame original commit: a355b65b13e64961da182f6c86f8ac57c9263831

--- a/testing/web-platform/tests/fenced-frame/web-bluetooth.https.html
+++ b/testing/web-platform/tests/fenced-frame/web-bluetooth.https.html
@@ -109,6 +109,25 @@ script
 src
 =
 "
+/
+common
+/
+dispatcher
+/
+dispatcher
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
 resources
 /
 utils
@@ -151,34 +170,38 @@ t
 >
 {
 const
-bluetooth_request_device_key
+fenced_frame
 =
-token
+await
+attachFencedFrameContext
 (
 )
 ;
-const
-fenced_frame
-=
-attachFencedFrame
-(
-generateURL
-(
-'
-resources
 /
-web
--
-bluetooth
--
-inner
+/
+Make
+sure
+the
+fenced
+frame
+is
+alive
+then
+click
+on
+it
 .
-html
-'
-[
-bluetooth_request_device_key
-]
+await
+fenced_frame
+.
+execute
+(
+(
 )
+=
+>
+{
+}
 )
 ;
 await
@@ -187,42 +210,103 @@ multiClick
 10
 10
 fenced_frame
+.
+element
 )
 ;
-const
-result
-=
 await
-nextValueFromServer
+fenced_frame
+.
+execute
 (
-bluetooth_request_device_key
+async
+(
+)
+=
+>
+{
+try
+{
+await
+navigator
+.
+bluetooth
+.
+requestDevice
+(
+{
+filters
+:
+[
+{
+name
+:
+'
+device
+'
+}
+]
+}
 )
 ;
-assert_equals
+assert_unreached
 (
-result
-'
+"
 Web
-Bluetooth
-requestDevice
-(
-)
-failed
-'
-'
-Web
-Bluetooth
-requestDevice
-(
-)
-must
-fail
+share
+should
+not
+succeed
 in
 a
 fenced
 frame
 .
+"
+)
+;
+}
+catch
+(
+e
+)
+{
+assert_equals
+(
+e
+.
+name
 '
+NotAllowedError
+'
+)
+;
+assert_true
+(
+e
+.
+message
+.
+includes
+(
+'
+Web
+Bluetooth
+is
+not
+allowed
+in
+a
+fenced
+frame
+tree
+.
+'
+)
+)
+;
+}
+}
 )
 ;
 }
