--- a/testing/web-platform/tests/fenced-frame/web-share.https.html
+++ b/testing/web-platform/tests/fenced-frame/web-share.https.html
@@ -108,6 +108,25 @@ script
 src
 =
 "
+/
+common
+/
+dispatcher
+/
+dispatcher
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
 resources
 /
 utils
@@ -150,34 +169,37 @@ t
 >
 {
 const
-navigator_share_key
+fenced_frame
 =
-token
+attachFencedFrameContext
 (
 )
 ;
-const
-fenced_frame
-=
-attachFencedFrame
-(
-generateURL
-(
-'
-resources
 /
-web
--
-share
--
-inner
+/
+Make
+sure
+the
+fenced
+frame
+is
+alive
+then
+click
+on
+it
 .
-html
-'
-[
-navigator_share_key
-]
+await
+fenced_frame
+.
+execute
+(
+(
 )
+=
+>
+{
+}
 )
 ;
 await
@@ -186,36 +208,130 @@ multiClick
 10
 10
 fenced_frame
+.
+element
 )
 ;
-const
-result
-=
 await
-nextValueFromServer
+fenced_frame
+.
+execute
 (
-navigator_share_key
+async
+(
+)
+=
+>
+{
+try
+{
+await
+navigator
+.
+share
+(
+{
+text
+:
+'
+hello
+world
+'
+}
 )
 ;
-assert_equals
+assert_unreached
 (
-result
-'
+"
 Web
-Share
-failed
-'
-'
-Web
-Share
+share
+should
+not
+succeed
 in
 a
 fenced
 frame
-must
-fail
 .
+"
+)
+;
+}
+catch
+(
+e
+)
+{
+assert_equals
+(
+e
+.
+name
 '
+NotAllowedError
+'
+)
+;
+/
+/
+The
+'
+web
+-
+share
+'
+permission
+is
+not
+allowed
+to
+be
+enabled
+inside
+fenced
+/
+/
+frames
+.
+If
+that
+changes
+this
+check
+will
+need
+to
+be
+updated
+.
+assert_true
+(
+e
+.
+message
+.
+includes
+(
+"
+Failed
+to
+execute
+'
+share
+'
+on
+'
+Navigator
+'
+:
+Permission
+denied
+"
+)
+)
+;
+}
+}
 )
 ;
 }
