Bug 1926636 [wpt PR 48775] - WebKit export of https://bugs.webkit.org/show_bug.cgi?id=277933, a=testonly
Automatic update from web-platform-tests
WebKit export of https://bugs.webkit.org/show_bug.cgi?id=277933 (#48775)

--

wpt-commits: 51d9d957c0acf51f95bcd15828b06b757f958166
wpt-pr: 48775

UltraBlame original commit: fb20ac0bae718bb5f748ed6c68cae0d90ff21805

--- a/testing/web-platform/tests/css/css-content/quotes-026.html
+++ b/testing/web-platform/tests/css/css-content/quotes-026.html
@@ -157,6 +157,30 @@ html
 "
 >
 <
+meta
+name
+=
+"
+fuzzy
+"
+content
+=
+"
+maxDifference
+=
+0
+-
+20
+;
+totalPixels
+=
+0
+-
+4
+"
+/
+>
+<
 style
 >
 body
