--- a/testing/web-platform/tests/css/css-content/quotes-027.html
+++ b/testing/web-platform/tests/css/css-content/quotes-027.html
@@ -154,6 +154,30 @@ html
 "
 >
 <
+meta
+name
+=
+"
+fuzzy
+"
+content
+=
+"
+maxDifference
+=
+0
+-
+123
+;
+totalPixels
+=
+0
+-
+1
+"
+/
+>
+<
 style
 >
 body
