Bug 1926679 [wpt PR 48784] - [wpt] Fix misattributed failures in `select-events.tentative.html`, a=testonly
Automatic update from web-platform-tests
[wpt] Fix misattributed failures in `select-events.tentative.html`

This test registers several event listeners with failing `assert_*`s,
with no code to handle the thrown error. This can cause testharness.js
to not link the failing assertion to any subtest [0]:
a. For a promise that wraps an event listener, the error thrown by
   `assert_*` causes the promise to never settle. Replace them with
   testharness.js's `EventWatcher` [1], which provides a more egonomic
   API to wait for events as promises.
b. An event listener that doesn't resolve an external promise can just
   be wrapped in `t.step_func(...)` [2].
c. Wait for "click" events concurrently with `clickOn()` so that the
   former can't reject unhandled.

The test still times out on the "Listbox controller code should not run"
subtest, but this now reflects a genuine browser defect.

[0]: https://wpt.fyi/results/html/semantics/forms/the-select-element/select-events.tentative.html?run_id=5140360401780736&run_id=5081668801265664&run_id=5095448935399424&run_id=6314748409020416
[1]: https://web-platform-tests.org/writing-tests/testharness-api.html#waiting-for-events
[2]: https://web-platform-tests.org/writing-tests/testharness-api.html#Test.step_func

Bug: None
Change-Id: If846ebc983ca35142b3fd22769f48ee51fa23e47
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5954825
Commit-Queue: Jonathan Lee <jonathanjleegoogle.com>
Reviewed-by: Joey Arhar <jarharchromium.org>
Cr-Commit-Position: refs/heads/main{#1372916}

--

wpt-commits: 6ff29a3d77eb2deaa5865769d272cacde7000b37
wpt-pr: 48784

UltraBlame original commit: 46129bda5bb44386edec5514be64e155d1a05726

--- a/testing/web-platform/tests/html/semantics/forms/the-select-element/select-events.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-select-element/select-events.tentative.html
@@ -492,6 +492,7 @@ promise_test
 (
 async
 (
+t
 )
 =
 >
@@ -536,23 +537,34 @@ open
 )
 ;
 const
-selectButtonPromise
+selectButtonWatcher
 =
 new
-Promise
+EventWatcher
 (
-async
-resolve
-=
->
-{
+t
 selectButton
+[
+"
+click
+"
+]
+)
+;
+const
+selectButtonPromise
+=
+selectButtonWatcher
 .
-addEventListener
+wait_for
 (
 "
 click
 "
+)
+.
+then
+(
 (
 e
 )
@@ -609,34 +621,38 @@ preventDefault
 (
 )
 ;
-resolve
+}
+)
+;
+const
+selectWatcher
+=
+new
+EventWatcher
 (
-)
-;
-}
-)
-;
-}
+t
+select
+[
+"
+click
+"
+]
 )
 ;
 const
 selectPromise
 =
-new
-Promise
-(
-async
-resolve
-=
->
-{
-select
+selectWatcher
 .
-addEventListener
+wait_for
 (
 "
 click
 "
+)
+.
+then
+(
 (
 e
 )
@@ -688,20 +704,7 @@ defaultPrevented
 "
 )
 ;
-resolve
-(
-)
-;
 }
-)
-;
-}
-)
-;
-await
-clickOn
-(
-selectButton
 )
 ;
 return
@@ -712,6 +715,10 @@ all
 [
 selectButtonPromise
 selectPromise
+clickOn
+(
+selectButton
+)
 ]
 )
 ;
@@ -802,6 +809,7 @@ promise_test
 (
 async
 (
+t
 )
 =
 >
@@ -852,23 +860,34 @@ open
 )
 ;
 const
-selectButtonPromise
+selectButtonWatcher
 =
 new
-Promise
+EventWatcher
 (
-async
-resolve
-=
->
-{
+t
 selectButton
+[
+"
+click
+"
+]
+)
+;
+const
+selectButtonPromise
+=
+selectButtonWatcher
 .
-addEventListener
+wait_for
 (
 "
 click
 "
+)
+.
+then
+(
 (
 e
 )
@@ -929,34 +948,38 @@ preventDefault
 (
 )
 ;
-resolve
+}
+)
+;
+const
+selectWatcher
+=
+new
+EventWatcher
 (
-)
-;
-}
-)
-;
-}
+t
+select
+[
+"
+click
+"
+]
 )
 ;
 const
 selectPromise
 =
-new
-Promise
-(
-async
-resolve
-=
->
-{
-select
+selectWatcher
 .
-addEventListener
+wait_for
 (
 "
 click
 "
+)
+.
+then
+(
 (
 e
 )
@@ -1035,20 +1058,7 @@ defaultPrevented
 "
 )
 ;
-resolve
-(
-)
-;
 }
-)
-;
-}
-)
-;
-await
-clickOn
-(
-selectButton
 )
 ;
 return
@@ -1059,6 +1069,10 @@ all
 [
 selectButtonPromise
 selectPromise
+clickOn
+(
+selectButton
+)
 ]
 )
 ;
@@ -1084,6 +1098,7 @@ promise_test
 (
 async
 (
+t
 )
 =
 >
@@ -1113,6 +1128,10 @@ addEventListener
 "
 input
 "
+t
+.
+step_func
+(
 (
 e
 )
@@ -1145,6 +1164,7 @@ input
 ;
 }
 )
+)
 ;
 select
 .
@@ -1153,6 +1173,10 @@ addEventListener
 "
 change
 "
+t
+.
+step_func
+(
 (
 e
 )
@@ -1185,6 +1209,7 @@ change
 )
 ;
 }
+)
 )
 ;
 await
@@ -1414,6 +1439,7 @@ promise_test
 (
 async
 (
+t
 )
 =
 >
@@ -1443,6 +1469,10 @@ addEventListener
 "
 input
 "
+t
+.
+step_func
+(
 (
 e
 )
@@ -1475,6 +1505,7 @@ input
 ;
 }
 )
+)
 ;
 select
 .
@@ -1483,6 +1514,10 @@ addEventListener
 "
 change
 "
+t
+.
+step_func
+(
 (
 e
 )
@@ -1515,6 +1550,7 @@ change
 )
 ;
 }
+)
 )
 ;
 await
@@ -1636,6 +1672,7 @@ promise_test
 (
 async
 (
+t
 )
 =
 >
@@ -1683,6 +1720,10 @@ addEventListener
 "
 input
 "
+t
+.
+step_func
+(
 (
 e
 )
@@ -1738,6 +1779,7 @@ input_event_count
 ;
 }
 )
+)
 ;
 select
 .
@@ -1746,6 +1788,10 @@ addEventListener
 "
 change
 "
+t
+.
+step_func
+(
 (
 e
 )
@@ -1800,6 +1846,7 @@ change_event_count
 +
 ;
 }
+)
 )
 ;
 await
