--- a/testing/web-platform/tests/navigation-api/scroll-behavior/scroll-after-preventDefault.html
+++ b/testing/web-platform/tests/navigation-api/scroll-behavior/scroll-after-preventDefault.html
@@ -38,6 +38,33 @@ js
 script
 >
 <
+script
+src
+=
+"
+.
+.
+/
+navigation
+-
+methods
+/
+return
+-
+value
+/
+resources
+/
+helpers
+.
+js
+"
+>
+<
+/
+script
+>
+<
 body
 >
 <
@@ -181,13 +208,9 @@ true
 }
 )
 ;
-await
-promise_rejects_dom
+assertBothRejectDOM
 (
 t
-"
-AbortError
-"
 navigation
 .
 navigate
@@ -197,8 +220,9 @@ navigate
 frag
 "
 )
-.
-finished
+"
+AbortError
+"
 )
 ;
 }
