Bug 1926681 [wpt PR 48785] - btm: Close additional tab to avoid crash, a=testonly
Automatic update from web-platform-tests
btm: Close additional tab to avoid crash

The test opens a tab and leaves it opened. This causes a crash when
running with --enable-leak-detection. The crash is unrelated to bounce
tracking mitigations: https://crbug.com/374852560

To work around the crash, close the tab that was opened.

Bug: 40279363
Change-Id: I88d143a161a3e2e0da64a2e076f86ba9d0028bb8
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5951565
Reviewed-by: Ryan Tarpine <rtarpinechromium.org>
Commit-Queue: Giovanni Ortuno Urquidi <ortunochromium.org>
Cr-Commit-Position: refs/heads/main{#1373074}

--

wpt-commits: b14c436ba9ed3023dd74d471a25aa3185a93bd9e
wpt-pr: 48785

UltraBlame original commit: b389af0cc1a8bd298d77e40560c46575fded76e0

--- a/testing/web-platform/tests/nav-tracking-mitigations/resources/cross-origin-get-cookie.sub.https.html
+++ b/testing/web-platform/tests/nav-tracking-mitigations/resources/cross-origin-get-cookie.sub.https.html
@@ -32,6 +32,41 @@ cookie
 '
 )
 ;
+/
+/
+Close
+this
+window
+to
+work
+around
+a
+Chrome
+crash
+when
+leaving
+windows
+opened
+/
+/
+in
+tests
+.
+https
+:
+/
+/
+crbug
+.
+com
+/
+374852560
+window
+.
+close
+(
+)
+;
 <
 /
 script
