Bug 1926752 [wpt PR 48793] - [WebAudio] Re-enable test suspended-context-messageport., a=testonly
Automatic update from web-platform-tests
[WebAudio] Re-enable test suspended-context-messageport.

It swaps suspend and .addModule because Chromium's initial
state of 'running' (https://crbug.com/40140417) increase the currentTime.

The swapping will not break the purpose of the test to validate
https://bugzilla.mozilla.org/show_bug.cgi?id=1596655.

Bug: 40248513
Change-Id: I2cb4608a6ae801288672871d70b51c6366a2c4ae
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5918008
Reviewed-by: Gabriel Brito <gabrielbritomicrosoft.com>
Commit-Queue: Sunggook Chue <sunggchmicrosoft.com>
Reviewed-by: Michael Wilson <mjwilsonchromium.org>
Cr-Commit-Position: refs/heads/main{#1373084}

--

wpt-commits: 00efcd5ef93d797fd9eccea3afe7ffe611db736d
wpt-pr: 48793

UltraBlame original commit: 99df335cfc36c5153cb567c3bea4e97f588fa072

--- a/testing/web-platform/tests/webaudio/the-audio-api/the-audioworklet-interface/suspended-context-messageport.https.html
+++ b/testing/web-platform/tests/webaudio/the-audio-api/the-audioworklet-interface/suspended-context-messageport.https.html
@@ -183,6 +183,35 @@ AudioContext
 (
 )
 ;
+/
+/
+suspend
+(
+)
+call
+as
+early
+as
+possible
+due
+to
+https
+:
+/
+/
+crbug
+.
+com
+/
+40140417
+.
+await
+realtime
+.
+suspend
+(
+)
+;
 await
 realtime
 .
@@ -191,13 +220,6 @@ audioWorklet
 addModule
 (
 modulePath
-)
-;
-await
-realtime
-.
-suspend
-(
 )
 ;
 const
