Bug 1926753 [wpt PR 48794] - IntersectionObserver -- properly handle "unknown" occlusion state, a=testonly
Automatic update from web-platform-tests
IntersectionObserver -- properly handle "unknown" occlusion state

If we most recently reported a target as "guaranteed visible", then in
the interest of avoiding false positives we must transition to "not
guaranteed visible" if the frame occlusion state becomes "unknown".

This CL also makes a child frame inherit its parent's "not visible"
occlusion state rather than calling it "unknown", which is technically
more correct.

Bug: chromium:371247941
Change-Id: I4d721dd252d013deac14a12f1f2922830ef2a8a4
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5950965
Reviewed-by: Xianzhu Wang <wangxianzhuchromium.org>
Commit-Queue: Stefan Zager <szagerchromium.org>
Cr-Commit-Position: refs/heads/main{#1373093}

--

wpt-commits: 0da067c931696835f75630136c9308c721fbaccc
wpt-pr: 48794

UltraBlame original commit: b4bab3bf42e6f6a85101a8a6ee0cfdecadd629a1

--- a/testing/web-platform/tests/intersection-observer/resources/v2-subframe.html
+++ b/testing/web-platform/tests/intersection-observer/resources/v2-subframe.html
@@ -87,7 +87,7 @@ waitForNotification
 {
 window
 .
-parent
+top
 .
 postMessage
 (
@@ -178,7 +178,7 @@ target
 ;
 window
 .
-parent
+top
 .
 postMessage
 (
