Bug 1926841 [wpt PR 48799] - Add WPT that scaleResolutionDownTo is optional on inactive encodings., a=testonly
Automatic update from web-platform-tests
Add WPT that scaleResolutionDownTo is optional on inactive encodings.

This adds JS level test coverage for this WebRTC bug fix:
https://webrtc-review.googlesource.com/c/src/+/366522

Bug: chromium:375048792
Change-Id: Ib633e8435747eaa0757eb62bc74d6d63c9bbd8dd
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5953396
Commit-Queue: Henrik Boström <hboschromium.org>
Auto-Submit: Henrik Boström <hboschromium.org>
Reviewed-by: Harald Alvestrand <htachromium.org>
Cr-Commit-Position: refs/heads/main{#1373253}

--

wpt-commits: 015fffcd4837e9ae371958bec24bd310714197a4
wpt-pr: 48799

UltraBlame original commit: 34a76c35393faa64ba2de4a51ec46ad87b6afec3

--- a/testing/web-platform/tests/webrtc-extensions/RTCRtpEncodingParameters-scaleResolutionDownTo.https.html
+++ b/testing/web-platform/tests/webrtc-extensions/RTCRtpEncodingParameters-scaleResolutionDownTo.https.html
@@ -848,12 +848,114 @@ addTransceiver
 Specifying
 scaling
 on
-some
-but
-not
-all
+a
+subset
+of
+active
 encodings
 throws
+)
+;
+promise_test
+(
+async
+t
+=
+>
+{
+const
+pc
+=
+new
+RTCPeerConnection
+(
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+pc
+.
+close
+(
+)
+)
+;
+const
+track
+=
+createResizableTrack
+(
+120
+60
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+track
+.
+stop
+(
+)
+)
+;
+pc
+.
+addTransceiver
+(
+track
+{
+sendEncodings
+:
+[
+{
+active
+:
+true
+scaleResolutionDownTo
+:
+{
+maxWidth
+:
+120
+maxHeight
+:
+60
+}
+}
+{
+active
+:
+false
+scaleResolutionDownTo
+:
+undefined
+}
+]
+}
+)
+;
+}
+addTransceiver
+:
+Specifying
+scaling
+on
+inactive
+encodings
+is
+optional
 )
 ;
 promise_test
@@ -995,12 +1097,168 @@ setParameters
 Specifying
 scaling
 on
-some
-but
-not
-all
+a
+subset
+of
+active
 encodings
 throws
+)
+;
+promise_test
+(
+async
+t
+=
+>
+{
+const
+pc
+=
+new
+RTCPeerConnection
+(
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+pc
+.
+close
+(
+)
+)
+;
+const
+track
+=
+createResizableTrack
+(
+120
+60
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+track
+.
+stop
+(
+)
+)
+;
+const
+{
+sender
+}
+=
+pc
+.
+addTransceiver
+(
+track
+{
+sendEncodings
+:
+[
+{
+}
+{
+}
+]
+}
+)
+;
+const
+params
+=
+sender
+.
+getParameters
+(
+)
+;
+params
+.
+encodings
+[
+0
+]
+.
+active
+=
+true
+;
+params
+.
+encodings
+[
+0
+]
+.
+scaleResolutionDownTo
+=
+{
+maxWidth
+:
+120
+maxHeight
+:
+60
+}
+;
+params
+.
+encodings
+[
+1
+]
+.
+active
+=
+false
+;
+params
+.
+encodings
+[
+1
+]
+.
+scaleResolutionDownTo
+=
+undefined
+;
+await
+sender
+.
+setParameters
+(
+params
+)
+;
+}
+setParameters
+:
+Specifying
+scaling
+on
+inactive
+encodings
+is
+optional
 )
 ;
 promise_test
